--- a/projects/Nehoran-Sticker-Translate/index.html
+++ b/projects/Nehoran-Sticker-Translate/index.html
@@ -274,7 +274,7 @@
     <script>
         // --- 1. CONFIG & STATE ---
         const defaultMappings = [
-            { hebrew: 'א', code: '17' }, { hebrew: 'ב', code: '' }, { hebrew: 'ג', code: '50' },
+            { hebrew: 'א', code: '17' }, { hebrew: 'ב', code: '4' }, { hebrew: 'ג', code: '50' },
             { hebrew: 'ד', code: 'A' }, { hebrew: 'ה', code: '7' }, { hebrew: 'ו', code: '18' },
             { hebrew: 'ז', code: 'E' }, { hebrew: 'ח', code: '8' }, { hebrew: 'ט', code: '' },
             { hebrew: 'י', code: 'P' }, { hebrew: 'כ', code: '0' }, { hebrew: 'ל', code: 'G' },
