--- a/projects/Nehoran-Sticker-Translate/index.html
+++ b/projects/Nehoran-Sticker-Translate/index.html
@@ -276,7 +276,7 @@
         const defaultMappings = [
             { hebrew: 'א', code: '17' }, { hebrew: 'ב', code: '4' }, { hebrew: 'ג', code: '50' },
             { hebrew: 'ד', code: 'A' }, { hebrew: 'ה', code: '7' }, { hebrew: 'ו', code: '18' },
-            { hebrew: 'ז', code: 'E' }, { hebrew: 'ח', code: '8' }, { hebrew: 'ט', code: '' },
+            { hebrew: 'ז', code: 'E' }, { hebrew: 'ח', code: '8' }, { hebrew: 'ט', code: '44' },
             { hebrew: 'י', code: 'P' }, { hebrew: 'כ', code: '0' }, { hebrew: 'ל', code: 'G' },
             { hebrew: 'מ', code: '74' }, { hebrew: 'נ', code: 'B' }, { hebrew: 'ס', code: 'C' },
             { hebrew: 'ע', code: 'X' }, { hebrew: 'פ', code: '' }, { hebrew: 'צ', code: 'M' },
