Fix HTML encoding issues in index.html

--- a/projects/Nehoran-Sticker-Translate/index.html
+++ b/projects/Nehoran-Sticker-Translate/index.html
@@ -279,11 +279,11 @@
             { hebrew: 'ז', code: 'E' }, { hebrew: 'ח', code: '8' }, { hebrew: 'ט', code: '44' },
             { hebrew: 'י', code: 'P' }, { hebrew: 'כ', code: '0' }, { hebrew: 'ל', code: 'G' },
             { hebrew: 'מ', code: '74' }, { hebrew: 'נ', code: 'B' }, { hebrew: 'ס', code: 'C' },
-            { hebrew: 'ע', code: 'X' }, { hebrew: 'פ', code: '' }, { hebrew: 'צ', code: 'M' },
+            { hebrew: 'ע', code: 'X' }, { hebrew: 'פ', code: 'K' }, { hebrew: 'צ', code: 'M' },
             { hebrew: 'ק', code: 'T' }, { hebrew: 'ר', code: '6' }, { hebrew: 'ש', code: 'Z' },
             { hebrew: 'ת', code: '9' },
-            { hebrew: 'ם', code: '' }, { hebrew: 'ן', code: '' }, { hebrew: 'ץ', code: '' },
-            { hebrew: 'ף', code: '' }, { hebrew: 'ך', code: '' }
+            { hebrew: 'ם', code: '74' }, { hebrew: 'ן', code: 'B' }, { hebrew: 'ץ', code: 'M' },
+            { hebrew: 'ף', code: 'K' }, { hebrew: 'ך', code: '0' }
         ];
 
         let currentMappings = JSON.parse(JSON.stringify(defaultMappings));
@@ -480,4 +480,5 @@
 </body>
 
 </html>
+
 
