--- a/projects/Nehoran-Sticker-Translate/index.html
+++ b/projects/Nehoran-Sticker-Translate/index.html
@@ -282,8 +282,8 @@
             { hebrew: 'ע', code: 'X' }, { hebrew: 'פ', code: 'K' }, { hebrew: 'צ', code: 'M' },
             { hebrew: 'ק', code: 'T' }, { hebrew: 'ר', code: '6' }, { hebrew: 'ש', code: 'Z' },
             { hebrew: 'ת', code: '9' },
-            { hebrew: 'ם', code: '74' }, { hebrew: 'ן', code: 'B' }, { hebrew: 'ץ', code: 'M' },
-            { hebrew: 'ף', code: 'K' }, { hebrew: 'ך', code: '0' }
+            { hebrew: 'ם', code: '' }, { hebrew: 'ן', code: '' }, { hebrew: 'ץ', code: '' },
+            { hebrew: 'ף', code: '' }, { hebrew: 'ך', code: '' }
         ];
 
         let currentMappings = JSON.parse(JSON.stringify(defaultMappings));
